# mp4join

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: binary_file_stream.cpp  binary_file_stream.hpp  binary_stream_base.cpp  binary_stream_base.hpp  endian.h  fourcc.hpp  lfs.h  mp4.cpp  mp4.hpp  mp4_join.cpp  mp4_join.hpp  mp4join.cpp  version.cpp.in
lib/mp4join/: api_export.h  mp4join.hpp  version.hpp
src/: mp4join_cli.cpp
